KAS-3756 PR comments

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -64,7 +64,7 @@
     <Auk::Toolbar @auto={{true}} as |Toolbar|>
       <Toolbar.Group @position="left" as |Group|>
         <Group.Item class="auk-content">
-          <h4 class="auk-u-my-2">{{t "result-decision"}}</h4>
+          <h4 class="auk-u-mb-2">{{t "result-decision"}}</h4>
           {{#if (not this.isEditingPill)}}
             <div class="auk-u-my-2">
               <Decision::DecisionResultPill
