--- a/app/components/agenda/agendaitem/agendaitem-retracted.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-retracted.hbs
@@ -1,10 +1,14 @@
-<div class="auk-alert auk-alert--warning">
-  <div class="auk-alert__body">
-    <Auk::Badge @icon="alert-triangle" @skin={{"warning"}} />
-    <div class="auk-alert__text">
-      <p class="auk-alert__message">
-        {{t "retracted-item"}}
-      </p>
+{{!-- TODO: replace custom HTML structure with adjusted AuAlert component when support for action buttons is implemented --}}
+<div
+  class="au-c-alert au-c-alert--warning au-c-alert--small auk-o-flex--vertical-center"
+  role="alert"
+>
+  <div class="auk-o-flex__item auk-o-flex">
+    <div class="au-c-alert__icon">
+      <AuIcon @icon="alert-triangle"/>
+    </div>
+    <div class="au-c-alert__content">
+      <div class="au-c-alert__message">{{t "retracted-item"}}</div>
     </div>
   </div>
   {{#if this.decisionmakingFlow}}
@@ -14,6 +18,7 @@
       @icon="chevron-right"
       @route="cases.case.subcases"
       @model={{this.decisionmakingFlow.id}}
+      class="auk-u-ml-2"
     >
       {{t "view-case"}}
     </Auk::Button>
