feat: add save button on fullscreen view

--- a/app/components/say-editor.hbs
+++ b/app/components/say-editor.hbs
@@ -28,7 +28,7 @@
             <AuButton
               @skin="primary"
               @loading={{@onSaveTask.isRunning}}
-              {{on "click" @onSaveTask}}
+              {{on "click" (perform @onSaveTask)}}
             >
               {{t "save"}}
             </AuButton>
