--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -36,6 +36,7 @@
               @allowFullscreen={{true}}
               @showSave={{true}}
               @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
+              @onSaveTask={{this.saveMinutes}}
             >
               <:header>
                 <AuButton
