change activeTab to tab

--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -39,7 +39,7 @@
           @transitionBack={{@onClose}}
           @didDeletePiece={{@didDeletePiece}}
           @onChangeFile={{perform this.loadFile}}
-          @activeTab={{@activeTab}}
+          @tab={{@tab}}
           @onTabChanged={{@onTabChanged}}
         />
       </div>
