--- a/app/templates/document.hbs
+++ b/app/templates/document.hbs
@@ -17,7 +17,7 @@
     @piece={{this.model}}
     @onClose={{this.transitionBack}}
     @didDeletePiece={{this.didDeletePiece}}
-    @activeTab={{this.activeTab}}
+    @tab={{this.tab}}
     @onSelectVersion={{this.setSelectedVersion}}
     @onTabChanged={{this.tabChanged}}
   />
