--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -217,7 +217,7 @@
                       @skin="link"
                       @route="document"
                       @model={{this.piece.id}}
-                      @query={{hash activeTab=signTab}}
+                      @query={{hash tab=signTab}}
                       role="menuitem"
                     >
                       {{t "present-for-signing"}}
