KAS-4115 Replace auk-badge instances with au-badge

--- a/app/components/auk/empty-state.hbs
+++ b/app/components/auk/empty-state.hbs
@@ -1,4 +1,8 @@
 <div class="auk-empty-state {{this.bordered}}" ...attributes>
-  <Auk::Badge @icon="circle-info" @size="large" />
+  <AuBadge
+    @icon="circle-info"
+    @skin="grey"
+    class="au-c-badge--medium"
+  />
   <p class="auk-empty-state__content">{{@message}}</p>
 </div>
