--- a/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
+++ b/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
@@ -1,8 +1,9 @@
 <div class="vl-uploaded-document">
   <div class="vl-uploaded-document__title">
-    <Auk::Badge
-      @size="medium"
+    <AuBadge
       @icon="document"
+      @skin="gray"
+      class="au-c-badge--medium"
     />
     <div class="vl-uploaded-document__title-container">
       <div class="title">
