--- a/app/templates/publications/publication/publication-activities/index.hbs
+++ b/app/templates/publications/publication/publication-activities/index.hbs
@@ -41,7 +41,7 @@
         {{#if event.isRequestActivity}}
           <Utils::Timeline::Event
             @badgeIcon="mail"
-            @badgeSkin="primary"
+            @badgeSkin="action"
             @event={{event}}
             as |event|
           >
