--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -4,7 +4,11 @@
       <Auk::Toolbar @auto={{true}} as |Toolbar|>
         <Toolbar.Group @position="left" as |Group|>
           <Group.Item>
-            <Auk::Badge @icon="document" @size="large" />
+            <AuBadge
+              @icon="document"
+              @skin="gray"
+              class="au-c-badge--medium"
+            />
           </Group.Item>
           <Group.Item class="auk-u-maximize-width">
             <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
