--- a/app/components/subcases/subcase-item.hbs
+++ b/app/components/subcases/subcase-item.hbs
@@ -1,22 +1,20 @@
 <div data-test-subcase-item-container class="vlc-procedure-step">
   <div class="vlc-procedure-step__badge-wrapper">
     {{#if this.loadSubcaseIsApproved.isRunning}}
-        <Auk::Badge @size="medium" />
+        <AuBadge class="au-c-badge--medium"/>
     {{else}}
       {{#if this.approved}}
-        <Auk::Badge
-          @skin="success"
-          @size="medium"
-          @icon="check"
-          class="vlc-procedure-step__badge"
+        <AuBadge
           data-test-subcase-item-approved
+          @icon="check"
+          @skin="success"
+          class="au-c-badge--medium"
         />
       {{else}}
-        <Auk::Badge
-          @skin="warning"
-          @size="medium"
+        <AuBadge
           @icon="sitemap"
-          class="vlc-procedure-step__badge"
+          @skin="warning"
+          class="au-c-badge--medium"
         />
       {{/if}}
     {{/if}}
