--- a/app/templates/styleguide/list.hbs
+++ b/app/templates/styleguide/list.hbs
@@ -29,21 +29,30 @@
   {{!-- BEGIN-SNIPPET document-bordered --}}
   <Auk::List @bordered={{true}}>
     <Auk::List::Item>
-      <Auk::Badge @icon="file" />
+       <AuBadge
+        @icon="file"
+        @size="small"
+      />
       <div class="auk-u-mx-2">
         <span class="auk-u-text-bold">VR 2019 2012 DOC.1256-2 Overeenkomst luchtvervoer Senegal</span>
         <div class="auk-u-text-muted auk-u-text-size--small">Nota - PDF</div>
       </div>
     </Auk::List::Item>
     <Auk::List::Item>
-      <Auk::Badge @icon="file" />
+      <AuBadge
+        @icon="file"
+        @size="small"
+      />
       <div class="auk-u-mx-2">
         <span class="auk-u-text-bold">VR 2019 2012 DOC.1256-2 Overeenkomst luchtvervoer Senegal</span>
         <div class="auk-u-text-muted auk-u-text-size--small">Decreet - PDF</div>
       </div>
     </Auk::List::Item>
     <Auk::List::Item>
-      <Auk::Badge @icon="file" />
+      <AuBadge
+        @icon="file"
+        @size="small"
+      />
       <div class="auk-u-mx-2">
         <span class="auk-u-text-bold">VR 2019 2012 DOC.1256-2 Overeenkomst luchtvervoer Senegal</span>
         <div class="auk-u-text-muted auk-u-text-size--small">Decreet - PDF</div>
