KAS-3918 feature flag for minutes

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -21,7 +21,9 @@
   <Auk::Tab @route="agenda.documents">
     {{t "documents"}}
   </Auk::Tab>
-  <Auk::Tab @route="agenda.minutes">
-    {{t "minutes"}}
-  </Auk::Tab>
+  {{#if this.enableDigitalMinutes}}
+    <Auk::Tab @route="agenda.minutes">
+      {{t "minutes"}}
+    </Auk::Tab>
+  {{/if}}
 </Auk::Tabs>
