KAS-3918 add permission for minutes

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -22,8 +22,10 @@
     {{t "documents"}}
   </Auk::Tab>
   {{#if this.enableDigitalMinutes}}
-    <Auk::Tab @route="agenda.minutes">
-      {{t "minutes"}}
-    </Auk::Tab>
+    {{#if (user-may "manage-minutes")}}
+      <Auk::Tab @route="agenda.minutes">
+        {{t "minutes"}}
+      </Auk::Tab>
+    {{/if}}
   {{/if}}
 </Auk::Tabs>
