--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -12,18 +12,20 @@
               </h4>
             </Toolbar.Group>
             <Toolbar.Group @position="right" as |Group|>
-              {{#unless this.isEditing}}
-                <Group.Item>
-                  <AuButton
-                    @skin="naked"
-                    @icon="pencil"
-                    @iconAlignment="left"
-                    {{on "click" (fn (set this "isEditing" true))}}
-                  >
-                    {{t (if @model.minutes "edit" "create")}}
-                  </AuButton>
-                </Group.Item>
-              {{/unless}}
+              {{#if (user-may "manage-minutes")}}
+                {{#unless this.isEditing}}
+                  <Group.Item>
+                    <AuButton
+                      @skin="naked"
+                      @icon="pencil"
+                      @iconAlignment="left"
+                      {{on "click" (fn (set this "isEditing" true))}}
+                    >
+                      {{t (if @model.minutes "edit" "create")}}
+                    </AuButton>
+                  </Group.Item>
+                {{/unless}}
+              {{/if}}
             </Toolbar.Group>
           </Auk::Toolbar>
         </Auk::Panel::Header>
