added loader on update button to reflect decision-extraction progress

--- a/app/components/agenda/agendaitem/decision/editor.hbs
+++ b/app/components/agenda/agendaitem/decision/editor.hbs
@@ -6,6 +6,7 @@
           <AuButton
             @skin="link"
             @icon="renew"
+            @loading={{@loadingUpdateContent}}
             @disabled={{@disableUpdateContent}}
             class="au-u-padding-left-none"
             {{on "click" @onUpdateContentClicked}}
