fix: title for say editor and minor css fix

--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -39,6 +39,7 @@
               @showSave={{true}}
               @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
               @onSaveTask={{this.saveMinutes}}
+              @title={{t "minutes"}}
             >
               <:header>
                 <AuButton
