--- a/app/components/news-item/edit-panel.hbs
+++ b/app/components/news-item/edit-panel.hbs
@@ -1,5 +1,5 @@
 <Auk::Panel>
-  <Auk::Panel::Header>
+  <Auk::Panel::Header @size="auto">
     <Auk::Toolbar as |Toolbar|>
       <Toolbar.Group @position="left" as |Group|>
         <Group.Item>
