simplify get label by checking if argument @label is present simplify translations by using matching identifiers change label on checkboxgroup to Select all add identifier above filters to indicate what the filter is about add loader to route edit EmptyState message

--- a/app/components/search/minister-filter.hbs
+++ b/app/components/search/minister-filter.hbs
@@ -2,7 +2,7 @@
   <Auk::Loader />
 {{else}}
   <Auk::CheckboxTree
-    @label={{t this.label}}
+    @label={{t (or @label "current-ministers")}}
     @items={{this.currentMinisters}}
     @itemStructure={{hash label="fullName"}}
     @selectedItems={{this.selectedCurrentMinisters}}
