KAS-4085 use title instead of 'say-editor' default

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -98,6 +98,7 @@
         <h4 class="auk-h4">{{t "concerns"}}</h4>
         <SayEditor
           @allowFullscreen={{true}}
+          @title={{t "concerns"}}
           @handleRdfaEditorInit={{this.handleRdfaEditorInitBetreft}}
         >
           <:header>
@@ -117,6 +118,7 @@
         <h4 class="auk-h4 au-u-padding-top">{{t "agendaitem-decision"}}</h4>
         <SayEditor
           @allowFullscreen={{true}}
+          @title={{t "agendaitem-decision"}}
           @handleRdfaEditorInit={{this.handleRdfaEditorInitBeslissing}}
         >
           <:header>
