KAS-4153 Add size parameter to rdfa-editor component, add styling overrides & apply size small to editor instance

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -101,6 +101,7 @@
           @piecePart={{this.betreftPiecePart}}
           @onPiecePartVersionClicked={{this.setBetreftEditorContent}}
           @onUpdateContentClicked={{this.updateBetreftContent}}
+          @size="small"
         />
         <h4 class="auk-h4 au-u-padding-top">{{t "agendaitem-decision"}}</h4>
         <Agenda::Agendaitem::Decision::Editor
