--- a/app/components/agenda/agendaitem/decision/editor.hbs
+++ b/app/components/agenda/agendaitem/decision/editor.hbs
@@ -23,6 +23,7 @@
   </div>
   <WebComponents::VlRdfaEditor
     data-test-agendaitem-decision-rdfa-editor
+    @size={{@size}}
     @handleRdfaEditorInit={{@handleRdfaEditorInit}}
   />
 </div>
