--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -1,4 +1,4 @@
-<div ...attributes>
+<div class={{this.sizeClass}} ...attributes>
   {{#if this.browserIsSupported}}
     <EditorContainer>
       <:top>
