KAS-4105 show doc type read-only

--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -28,7 +28,8 @@
         @selectedDocumentType={{@row.documentType}}
         @onChange={{@row.setDocumentType}}
       />
-    {{else}}
+    {{/if}}
+    {{#if (or (not @isEditingEnabled) @row.hasSignFlow)}}
       {{@row.documentType.label}}
     {{/if}}
   </td>
