--- a/app/components/say-editor.hbs
+++ b/app/components/say-editor.hbs
@@ -49,6 +49,7 @@
     </div>
   {{/if}}
   <WebComponents::VlRdfaEditor
+    data-test-say-editor-rdfa
     @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
   />
 </div>
