chore: make Aanbieden voor handtekenen create the mark only

--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -9,6 +9,7 @@
         @hideNewerVersions={{false}}
         @didDeleteContainer={{@didDeleteContainer}}
         @onOpenUploadModal={{@onOpenUploadModal}}
+        @markForSignature={{@markForSignature}}
         @onAddPiece={{@onAddPiece}}
         @isGenerated={{false}}
       />
