feat: use label for concept

--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -15,7 +15,7 @@
       @icon="sign"
       @skin={{this.skin}}
     >
-      {{this.title}}
+      {{this.status.value.label}}
     </AuPill>
   {{/if}}
 {{/if}}
