--- a/app/components/documents/batch-details/batch-editing-row.hbs
+++ b/app/components/documents/batch-details/batch-editing-row.hbs
@@ -24,6 +24,15 @@
       @onChange={{this.setAccessLevel}}
     />
   </td>
+  <td>
+    <AuButton
+      @skin="primary"
+      @disabled={{(or this.isDisabled this.isSignMarkingDisabled)}}
+      {{on "click" (fn this.setMarkedForSignature true)}}
+    >
+      {{t "present-for-signing"}}
+    </AuButton>
+  </td>
   <td class="auk-u-text-align--right">
     {{#if this.isToBeDeleted}}
       <AuButton
