--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -23,8 +23,7 @@
               <Search::MinisterFilter
                 @selected={{this.mandatees}}
                 @onChange={{this.setMandatees}}
-                @hidePastMinistersOption={{true}}
-                @label={{"th-select-all"}}
+                @label={{t "th-select-all"}}
               />
           </div>
           {{/if}}
