--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -77,6 +77,7 @@
               <Search::MinisterFilter
                 @selected={{this.mandatees}}
                 @onChange={{this.setMandatees}}
+                @showPastMinisters={{true}}
               />
             </div>
             <div class="auk-u-mb-2">
