--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -53,6 +53,7 @@
             <Search::MinisterFilter
               @selected={{this.mandatees}}
               @onChange={{this.setMandatees}}
+              @showPastMinisters={{true}}
             />
           </div>
         </div>
