--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -1,21 +1,18 @@
-{{#if (or this.status.isLoading this.signingHubUrl.isLoading)}}
+{{#if (or this.data.isRunning)}}
   <div class="auk-loader" role="alert" aria-busy="true"></div>
 {{else}}
-  {{#if this.signingHubUrl.value}}
+  {{#if this.data.value.signingHubUrl}}
     <AuPill
       @icon="sign"
       @skin={{this.skin}}
-      @href={{this.signingHubUrl.value}}
+      @href={{this.data.value.signingHubUrl}}
       target="_blank"
     >
-      {{this.title}}
+      {{this.data.value.status.label}}
     </AuPill>
   {{else}}
-    <AuPill
-      @icon="sign"
-      @skin={{this.skin}}
-    >
-      {{this.status.value.label}}
+    <AuPill @icon="sign" @skin={{this.skin}}>
+      {{this.data.value.status.label}}
     </AuPill>
   {{/if}}
 {{/if}}
