--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -11,7 +11,7 @@
           <div class="au-c-card au-o-box au-o-box--small">
             <Auk::Label>{{t "status"}}</Auk::Label>
             <Signatures::StatusFilter
-              @selectedItems={{this.statuses}}
+              @selectedStatusIds={{this.statuses}}
               @onChange={{this.onChangeStatus}}
             />
           </div>
