--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -42,7 +42,7 @@
       @totalNumberOfItems={{@model.meta.count}}
       @onChangeSize={{fn (mut this.size)}}
       @onChangePage={{fn (mut this.page)}}
-      @onClickRow={{this.navigateToPublicationFlow}}
+      @onClickRow={{this.navigateToSignFlow}}
       >
       <:header>
         <th class="auk-table__col--6">{{t "document-name"}}</th>
