Added isGenerated flag to decision document card

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -58,6 +58,7 @@
           @showCreateNewVersion={{true}}
           @onCreateNewVersion={{perform this.onCreateNewVersion}}
           @bordered={{true}}
+          @isGenerated={{true}}
         />
       {{else}}
         <Auk::Loader />
