--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -13,6 +13,7 @@
   {{#if this.firstAgendaitem}}
     <Auk::Tab
       @route="agenda.agendaitems.agendaitem"
+      @current-when="agenda.agendaitems.agendaitem"
       @models={{this.modelsForDetailRoute}}
     >
       {{t "detail"}}
