--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -285,6 +285,7 @@
                       piece
                     }}
                     @onCancelChangeAccessLevel={{this.reloadAccessLevel}}
+                    @label={{this.label}}
                   />
                 </div>
               {{/each}}
