--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -99,6 +99,7 @@
                 @showCreateNewVersion={{true}}
                 @onCreateNewVersion={{perform this.onCreateNewVersion}}
                 @bordered={{true}}
+                @label={{this.label}}
               />
             </Auk::Panel::Body>
           {{/if}}
