--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -10,7 +10,7 @@
         @didDeleteContainer={{@didDeleteContainer}}
         @onOpenUploadModal={{@onOpenUploadModal}}
         @onAddPiece={{@onAddPiece}}
-        @isGenerated={{false}}
+        @label={{'uploaded-at'}}
       />
     </div>
   {{else}}
