KAS-4145 wrap batch signature marking with feature flag

--- a/app/components/documents/batch-details/batch-documents-details-modal.hbs
+++ b/app/components/documents/batch-details/batch-documents-details-modal.hbs
@@ -18,8 +18,10 @@
             <th>{{t "document-type"}}</th>
             {{#if (user-may "manage-documents")}}
               <th>{{t "publicity"}}</th>
-              {{#if @decisionActivity}}
-                <th>{{t "signature"}}</th>
+              {{#if this.isSignaturesEnabled}}
+                {{#if @decisionActivity}}
+                  <th>{{t "signature"}}</th>
+                {{/if}}
               {{/if}}
             {{else}}
               <th>{{t "file-type"}}</th>
@@ -32,6 +34,7 @@
             <Documents::BatchDetails::BatchEditingRow
               @selectedRows={{this.selectedRows}}
               @decisionActivity={{@decisionActivity}}
+              @isSignaturesEnabled={{this.isSignaturesEnabled}}
             />
           {{/if}}
           {{#each this.rows as |row|}}
