--- a/app/components/documents/batch-details/batch-editing-row.hbs
+++ b/app/components/documents/batch-details/batch-editing-row.hbs
@@ -24,7 +24,7 @@
       @onChange={{this.setAccessLevel}}
     />
   </td>
-  {{#if @decisionActivity}}
+  {{#if (and @isSignaturesEnabled @decisionActivity)}}
     <td>
       <AuButton
         @skin="primary"
